Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127009

Assert in QVariant possibly caused by mis-compilation by qmlsc/qmlcachegen

XMLWordPrintable

    • 179581e16 (dev), 648d95a6f (6.8)

      To reproduce, run the attached program and press W to make the red beam hit the top of the white block. 

      I then get "ASSERT: "d.canUseInternalSpace(iface)" in file /home/paul/dev/qt6/qtbase/src/corelib/kernel/qvariant.cpp, line 308"

      This does not happen when running with  QML_DISK_CACHE=aot-bytecode

        1. xr_freeformteleportation.tar.gz
          4 kB
          Paul Olav Tvete
        2. stacktrace.txt
          5 kB
          Paul Olav Tvete
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            olivier.decanniere Olivier De Cannière
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes